# hbb2obb

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
data/: README.md  classes.yaml
data/benchmark_results/mobile_sam/: config.yaml  results.yaml  summary.txt
data/benchmark_results/sam2.1_b/: config.yaml  results.yaml  summary.txt
data/benchmark_results/sam2_b/: config.yaml  results.yaml  summary.txt
data/benchmark_results/sam_b/: config.yaml  results.yaml  summary.txt
data/benchmark_results/sam_l/: config.yaml  results.yaml  summary.txt
data/benchmark_results/sam_l-sam_b/: config.yaml  results.yaml  summary.txt
data/benchmark_results/sam_l-sam_b-sam2.1_b/: config.yaml  results.yaml  summary.txt
data/benchmark_results/sam_l-sam_b-sam2_b/: config.yaml  results.yaml  summary.txt
data/benchmark_results/sam_l-sam_b-sam2_b-sam2.1_b/: config.yaml  results.yaml  summary.txt
data/benchmark_results/sam_l-sam_b-sam2_b-sam2.1_b-mobile_sam/: config.yaml  results.yaml  summary.txt
data/labels_hbb/: 00164.txt  04433.txt  05050.txt
data/labels_obb/: 00164.txt  04433.txt  05050.txt
data/labels_obb_gt/: 00164.txt  04433.txt  05050.txt
hbb2obb/: __init__.py  cli.py  converter.py  evaluator.py  utils.py
scripts/: json2yolo.py  optimize_hbb2obb.py  plot_optimization_results.py  voc2yolo.py  yolo2json.py
tests/: conftest.py  test_converter.py  test_evaluator.py  test_format_conversion_scripts.py  test_utils.py
